[package]
name = "wyz"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
lto = false
incremental = true

[profile.release]
opt-level = 3
lto = true
incremental = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
ariadne = { version = "0.1.5" }